--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
                         <a href="http://blog.davidhinojosa.net">Blog</a>
                     </li> -->
                 </ul>
+                <div class="lan">
+                    <div id="google_translate_element"></div><script type="text/javascript">
+                        function googleTranslateElementInit() {
+                          new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true, gaId: 'UA-70923662-8'}, 'google_translate_element');
+                        }
+                        </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
