--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <a href="https://play.google.com/store/apps/details?id=com.bodhi.timer" target="_blank"><img src="img/mobile/bodhimeditacion.png" class="img-responsive"></a>
                     </div>                        
                     <div>
-                        <a href="#" target="_blank"><img src="img/mobile/cargo77.png" class="img-responsive"></a>
+                        <a href="" target="_blank"><img src="img/mobile/cargo77.png" class="img-responsive"></a>
                     </div>
                     <div>
                         <a href="https://play.google.com/store/apps/details?id=com.municipioUIO.movilizate" target="_blank"><img src="img/mobile/movilizate.png" class="img-responsive"></a>
@@ -213,9 +213,8 @@
                         <a href="https://play.google.com/store/apps/details?id=com.poloscore" target="_blank"><img src="img/mobile/poloscore.png" class="img-responsive"></a>
                     </div>
                     <div>
-                        <a href="#" target="_blank"><img src="img/mobile/vivelo.png" class="img-responsive"></a>
-                    </div>
-                    
+                        <a href="" target="_blank"><img src="img/mobile/vivelo.png" class="img-responsive"></a>
+                    </div>                    
                 </div>
                 
             </div>
