--- a/index.html
+++ b/index.html
@@ -231,30 +231,38 @@
                 </div>
                 <div class="carousel-websites">
                     <div>
-                        <a href="http://natures-halo.com/" target="_blank"><img src="img/websites/natureshalo.jpg" class="img-responsive"></a>
-                    </div>                    
+                        <a href="http://yosyapas.org/" target="_blank"><img src="img/websites/losyapas.jpg" class="img-responsive" alt="Visita Los Yapas Holistic Center"></a>
+                    </div>                  
                     <div>
-                        <a href="http://educationabroadla.com/" target="_blank"><img src="img/websites/eala.jpg" class="img-responsive"></a>
+                        <a href="http://trisquel.ec/" target="_blank"><img src="img/websites/trisquel.jpg" class="img-responsive" alt="Visita Grupo Trisquel"></a>
                     </div>
                     <div>
-                        <a href="http://paulsalinasherrera.com/" target="_blank"><img src="img/websites/paulsalinas.jpg" class="img-responsive"></a>
+                        <a href="http://educationabroadla.com/" target="_blank"><img src="img/websites/eala.jpg" class="img-responsive" alt="Visita Education Abroad Latin America"></a>
                     </div>
                     <div>
-                        <a href="http://corporate.com.ec/" target="_blank"><img src="img/websites/corporate.jpg" class="img-responsive"></a>
+                        <a href="http://confiamed.com/" target="_blank"><img src="img/websites/confiamed.jpg" class="img-responsive" alt="Visita Confiamed"></a>
                     </div>
                     <div>
-                        <a href="http://rebelsaloon.com/" target="_blank"><img src="img/websites/rebelsaloon.jpg" class="img-responsive"></a>
+                        <a href="http://corporate.com.ec/" target="_blank"><img src="img/websites/corporate.jpg" class="img-responsive" alt="Visita Corporate Partners"></a>
                     </div>
                     <div>
-                        <a href="http://bodhimeditacion.com/" target="_blank"><img src="img/websites/bodhimeditacion.jpg" class="img-responsive"></a>
+                        <a href="http://paulsalinasherrera.com/" target="_blank"><img src="img/websites/paulsalinas.jpg" class="img-responsive" alt="Visita Dr. Paul Salinas"></a>
                     </div>
                     <div>
-                        <a href="http://grupopasquel.com/" target="_blank"><img src="img/websites/grupopasquel.jpg" class="img-responsive"></a>
+                        <a href="http://bodhimeditacion.com/" target="_blank"><img src="img/websites/bodhimeditacion.jpg" class="img-responsive" alt="Visita Bodhi Meditacion"></a>
                     </div>
                     <div>
-                        <a href="http://mutualistos.com/" target="_blank"><img src="img/websites/mutualistos.jpg" class="img-responsive"></a>
+                        <a href="http://grupopasquel.com/" target="_blank"><img src="img/websites/grupopasquel.jpg" class="img-responsive" alt="Visita Grupo Pasquel"></a>
                     </div>
-                   
+                    <div>
+                        <a href="http://mutualistos.com/" target="_blank"><img src="img/websites/mutualistos.jpg" class="img-responsive" alt="Visita Mutualistos"></a>
+                    </div>
+                    <div>
+                        <a href="http://natures-halo.com/" target="_blank"><img src="img/websites/natureshalo.jpg" class="img-responsive" alt="Visita Natures Halo"></a>
+                    </div> 
+                    <div>
+                        <a href="http://rebelsaloon.com/" target="_blank"><img src="img/websites/rebelsaloon.jpg" class="img-responsive" alt="Visita Rebel Saloon"></a>
+                    </div>
                 </div>                
             </div>            
         </div>
