Added golderie website to portfolio

--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
             <div role="tabpanel" class="tab-pane" id="web">
                 <div class="carousel-websites">
                     <div>
+                        <a href="http://golderie.com/" target="_blank"><img src="img/websites/golderie.jpg" class="img-responsive" alt="Visita Golderie"></a>
+                    </div>                  
+                    <div>
                         <a href="http://losyapas.org/" target="_blank"><img src="img/websites/losyapas.jpg" class="img-responsive" alt="Visita Los Yapas Holistic Center"></a>
                     </div>                  
                     <div>
