--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,16 @@
 
     <div class="container-fluid" id="mix-container">
         <div class="row no-gutter">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 portfolio-item mix web">
+                <a href="#golderie-w" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-eye fa-2x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/websites/thumbs/golderie.jpg" class="img-responsive" alt="Golderie Website">
+                </a>
+            </div>
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 portfolio-item mix mobile">
                 <a href="#bodhi-ma" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -326,6 +336,39 @@
     </div>
 
     <!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="golderie-w" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="modal-bar">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-4 col-sm-push-8">
+                            <div class="project-description">
+                                <h2>Goderie Website</h2>
+                                <ul class="list-inline item-details">
+                                    <li><span class="bold">Client:</span> Golderie</li>
+                                    <li><span class="bold">Category:</span> Websites</li>
+                                    <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development <a href="mailto:nersa.acosta@gmail.com">Nersa Acosta</a>)</li>
+                                </ul>
+                                <p></p>
+                                <a href="http://golderie.com" target="_blank" class="btn ">Visit the site</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 col-sm-pull-4">
+                            <img src="img/portfolio/websites/golderie.jpg" class="img-responsive img-centered" alt="Bodhi Timer">
+                            <img src="img/portfolio/websites/golderie2.jpg" class="img-responsive img-centered" alt="Bodhi Timer">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="portfolio-modal modal fade" id="bodhi-ma" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-bar">
