Fixed error on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -354,7 +354,7 @@
                                 <ul class="list-inline item-details">
                                     <li><span class="bold">Client:</span> Golderie</li>
                                     <li><span class="bold">Category:</span> Websites</li>
-                                    <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development <a href="mailto:nersa.acosta@gmail.com">Nersa Acosta</a>)</li>
+                                    <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development</li>
                                 </ul>
                                 <p></p>
                                 <a href="http://golderie.com" target="_blank" class="btn ">Visit the site</a>
