added new portfolio item

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Diseñamos y creamos páginas web interactivas y modernas, utilizando tecnologías como html, css, javascript, wordpress entre otros. Estamos ubicados en Quito-Ecuador.">
+    <meta name="description" content="Me especializo en Diseño Centrado en el Usuario, Arquitectura de la Información y en Diseño de Interfaces para dispositivos móviles y de escritorio. Tambien tengo conocimientos amplios de Desarrollo Frontend en HTML, CSS y Javascript. Vivo y soy de Quito-Ecuador pero trabajo en todo el mundo.">
     <meta name="author" content="David Hinojosa">
 
     <!-- Open Graph -->
-    <meta property="og:site_name" content="Ai-Laik by David Hinojosa" />
-    <meta property="og:title" content="Diseño y Desarrollo de sitios web" />
-    <meta property="og:description" content="Diseñamos y creamos páginas web interactivas y modernas, utilizando tecnologías como html, css, javascript, wordpress entre otros. Estamos ubicados en Quito-Ecuador" />
+    <meta property="og:site_name" content="by David Hinojosa" />
+    <meta property="og:title" content="Consultor UX & Diseñador UI" />
+    <meta property="og:description" content="Me especializo en Diseño Centrado en el Usuario, Arquitectura de la Información y en Diseño de Interfaces para dispositivos móviles y de escritorio. Tambien tengo conocimientos amplios de Desarrollo Frontend en HTML, CSS y Javascript. Vivo y soy de Quito-Ecuador pero trabajo en todo el mundo." />
     <meta property="og:image" content="img/og.jpg">
 
     <title>David Hinojosa | Diseño Web, UX, UI</title>
@@ -127,8 +127,8 @@
                     <img src="img/davidhinojosa.jpg" data-wow-delay=".1s" class="img-round img-responsive img-center wow fadeInLeft profile">
                 </div>
                 <div class="col-sm-8 wow fadeIn" data-wow-delay=".1s">
-                    <h2 class="section-heading wow fadeIn" data-wow-delay=".2s">Mi nombre es David Hinojosa</h2>
-                    <p>Soy diseñador de aplicaciones móviles y páginas web. Me especializo en Arquitectura de la Información, Experiencia de Usuario, Diseño de Interfaz y Desarrollo Frontend en HTML, CSS y Javascript. Vivo y soy de Quito-Ecuador pero trabajo en todo el mundo. Conoce lo que hago. </p>
+                    <h2 class="section-heading wow fadeIn" data-wow-delay=".2s">Mi nombre es David Hinojosa y soy consultor en User Experience(UX)</h2>
+                    <p>Me especializo en Diseño Centrado en el Usuario, Arquitectura de la Información y en Diseño de Interfaces para dispositivos móviles y de escritorio. Tambien tengo conocimientos amplios de Desarrollo Frontend en HTML, CSS y Javascript. Vivo y soy de Quito-Ecuador pero trabajo en todo el mundo. Conoce lo que hago.</p>
                 </div>
             </div>
         </div>
@@ -145,28 +145,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 text-center">
-                    <div class="service-box wow fadeInUp" data-wow-delay=".3s">
+                    <div class="service-box wow pulse" data-wow-delay=".2s">
                         <img src="img/svg/user-experience.svg" class="img-responsive">
                         <h3>Diseño de Experiencia de Usuario (UX)</h3>
                         <p>Llenar las expectativas de tu cliente es la parte más compleja al momento de diseñar productos digitales innovadores. La investigación previa de quienes usan tu producto y su comportamiento es clave para el éxito de tu aplicación o sitio web.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 text-center">
-                    <div class="service-box wow fadeInUp" data-wow-delay=".4s">
+                    <div class="service-box wow pulse" data-wow-delay=".4s">
                         <img src="img/svg/diseno-ui.svg" class="img-responsive">
                         <h3>Diseño de interfaces móviles y de escritorio (UI)</h3>
                         <p>Una interfaz cómoda, amigable y que se una con la línea gráfica de tu marca crea usuarios que se convierten en predicadores de tu producto.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 text-center">
-                    <div class="service-box wow fadeInUp" data-wow-delay=".5s">
+                    <div class="service-box wow pulse" data-wow-delay=".4s">
                         <img src="img/svg/desarrollo.svg" class="img-responsive">
                         <h3>Desarrollador de interfaces de la web móvil y de escritorio</h3>
                         <p>Con la estructura del contenido en (HTML), aplicando el diseño y diagramación en hojas de estilo (CSS) y agregando la interacción con el usuario (Javascript) me encargo de la visualización correcta de páginas web en diferentes dispositivos fijos o móviles.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 text-center">
-                    <div class="service-box wow fadeInUp" data-wow-delay=".3s">
+                    <div class="service-box wow pulse" data-wow-delay=".6s">
                         <img src="img/svg/wordpress.svg" class="img-responsive">
                         <h3>Diseño y desarrollo de páginas web en WordPress</h3>
                         <p>El CMS (Content Management System) mas utilizado en el mundo. El 60.9% de los sitios web en están hechos con WordPress. Si quieres lanzar tu página de manera rápida y segura, wordpress es todo lo que necesitas</p>
@@ -179,7 +179,7 @@
     <div class="bg-primary" id="portfolio-home">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center">
+                <div class="col-sm-12 text-center wow fadeIn">
                     <h2 class="section-heading ">Portafolio</h2>
                     <p class="sub">Unos ejemplos de lo que podemos hacer juntos.</p>
                     <ul class="nav nav-tabs" role="tablist">
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-content">
+        <div class="tab-content wow fadeInRight">
             <div role="tabpanel" class="tab-pane active" id="mobile">              
                 <div class="carousel-mobile">
                     <div>
