--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,16 @@
     <div class="container-fluid" id="mix-container">
         <div class="row no-gutter">
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 portfolio-item mix web">
+                <a href="#chakana-w" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-eye fa-2x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/websites/thumbs/chakana.jpg" class="img-responsive" alt="Chakana Website">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 portfolio-item mix web">
                 <a href="#golderie-w" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -336,6 +346,39 @@
     </div>
 
     <!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="chakana-w" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="modal-bar">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-4 col-sm-push-8">
+                            <div class="project-description">
+                                <h2>Chakana Hotel Boutique Website</h2>
+                                <ul class="list-inline item-details">
+                                    <li><span class="bold">Client:</span> Chakana</li>
+                                    <li><span class="bold">Category:</span> Websites</li>
+                                    <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development</li>
+                                </ul>
+                                <p></p>
+                                <a href="http://chakanahotelboutique.com" target="_blank" class="btn btn-primary ">Visit the site</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 col-sm-pull-4">
+                            <img src="img/portfolio/websites/chakana1.jpg" class="img-responsive img-centered" alt="Chakana Website Image">
+                            <img src="img/portfolio/websites/chakana2.jpg" class="img-responsive img-centered" alt="Chakana Webite Screenshots">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="portfolio-modal modal fade" id="golderie-w" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-bar">
@@ -357,7 +400,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://golderie.com" target="_blank" class="btn ">Visit the site</a>
+                                <a href="http://golderie.com" target="_blank" class="btn btn-primary ">Visit the site</a>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
@@ -391,7 +434,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Android Development (<a href="mailto:nersa.acosta@gmail.com">Nersa Acosta</a>)</li>
                                 </ul>
                                 <p></p>
-                                <a href="https://play.google.com/store/apps/details?id=com.bodhi.timer" target="_blank" class="btn ">Download the App</a>
+                                <a href="https://play.google.com/store/apps/details?id=com.bodhi.timer" target="_blank" class="btn btn-primary ">Download the App</a>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
@@ -593,7 +636,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Wordpress Development</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://cbqpaintball.net" target="_blank" class="btn">Go to site</a>
+                                <a href="http://cbqpaintball.net" target="_blank" class="btn btn-primary">Go to site</a>
                             </div>
                         </div>
                         <div class=" col-sm-8 col-sm-pull-4 ">
@@ -661,7 +704,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Front-End Development, Wordpress</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://educationabroadla.com" target="_blank" class="btn ">Go to site</a>
+                                <a href="http://educationabroadla.com" target="_blank" class="btn btn-primary ">Go to site</a>
 
                             </div>
                         </div>
@@ -795,7 +838,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Front-End Development, Wordpress</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://zattere.com.ec" target="_blank" class="btn ">Go to site</a>
+                                <a href="http://zattere.com.ec" target="_blank" class="btn btn-primary ">Go to site</a>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
@@ -862,7 +905,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Front-End Development, Wordpress</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://corporate.com.ec/" target="_blank" class="btn">Go to site</a>
+                                <a href="http://corporate.com.ec/" target="_blank" class="btn btn-primary">Go to site</a>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
@@ -928,7 +971,7 @@
                                     <li><span class="bold">Expertise:</span> UX/UI Design, Front-End Development, Wordpress, Content Creation</li>
                                 </ul>
                                 <p></p>
-                                <a href="http://bodhimeditacion.com" target="_blank" class="btn">Go to site</a>
+                                <a href="http://bodhimeditacion.com" target="_blank" class="btn btn-primary">Go to site</a>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
