--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/marco-s.jpeg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Marco Salazar</h3>
                     <h4>Devsu Software
                         </br>Project Owner</h4>
@@ -302,7 +302,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/byron-g.jpg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Byron Guerrero</h3>
                     <h4>Trisquel Consultores Cia. Ltda.
                         </br>CEO</h4>
@@ -311,7 +311,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/andres-a.jpg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Andres Artunduaga</h3>
                     <h4>Head of Operations
                         </br>Rainforest Fresh Imports</h4>
@@ -321,7 +321,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/duenytz.jpg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Duenyts Sierra</h3>
                     <h4>Mobile Developer
                         </br>Inesperty</h4>
@@ -331,7 +331,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/carlos-g.jpg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Carlos Guerrero</h3>
                     <h4>CEO
                         </br>Latinmanagers</h4>
@@ -341,7 +341,7 @@
                 <div class="col-sm-1 hidden-xs wow fadeInDown" data-wow-delay=".4s">
                     <img src="img/profiles/cesar-y.jpg" class="img-responsive img-round text-center">
                 </div>
-                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInDown" data-wow-delay=".3s">
+                <div class="col-sm-5 col-xs-12 add-margin-bottom wow fadeInUp" data-wow-delay=".3s">
                     <h3 class="nombre">Cesar Yugcha</h3>
                     <h4>Multimedia Designer
                         </br>DANEC</h4>
@@ -398,19 +398,6 @@
             </div>
         </div>
     </section>
-    <!--
-    <div class="bg-secondary" id="hosting">
-        <div class="container">
-            <div class="col-sm-2 text-center">
-                <h3><i class="fa fa-server fa-4x wow bounceIn"></i></h3>
-            </div>
-            <div class="col-sm-10 wow bounceIn">
-                <h2>También te asesoro con</h2>
-                <h1>Dominios, Hosting & Correos Electrónicos</h1>
-            </div>
-        </div>
-    </div>
--->
 
     <section id="contactus">
         <div class="container">
