--- a/portfolio.html
+++ b/portfolio.html
@@ -76,27 +76,16 @@
             <div class="bounce3"></div>
         </div>
     </div>
-    <div class="header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="back">
-                        <a href="index.html"><img src="img/icons/back.svg" alt="back home"></a>
-                    </div>
-                </div>
-                
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="portfolio-nav">
-                        <a href="#" class="filter" data-filter="all">All</a>
-                        <a href="#" class="filter" data-filter=".web">Web sites</a>
-                        <a href="#" class="filter" data-filter=".webapps">Web apps</a>
-                        <a href="#" class="filter" data-filter=".mobile">Mobile apps</a>
-                        <a href="#" class="filter" data-filter=".branding">Branding</a>
-                    </div>
-                </div>
-            </div>
+    <div class="portfolio-header">          
+        <div class="logo-portfolio">
+            <a href="index.html"><img src="img/davidhinojosa-logo.png" alt="David Hinojosa Logo" class="img-responsive"/></a>
+        </div>
+        <div class="portfolio-nav">
+            <a href="#" class="filter" data-filter="all">All</a>
+            <a href="#" class="filter" data-filter=".web">Web sites</a>
+            <a href="#" class="filter" data-filter=".webapps">Web apps</a>
+            <a href="#" class="filter" data-filter=".mobile">Mobile apps</a>
+            <a href="#" class="filter" data-filter=".branding">Branding</a>
         </div>
     </div>
 
